# CalTool

./: Aero2Ros.m  Cart2R_ros.m  Cart2R_vis.m  Cart2T_aero.m  Cart2T_ros.m  Cart2T_vis.m  DrawBoundingBox.m  FiniteDiff.m  GetBoundingBox.m  HandRegister.m  LoadCameraPoses.m  LoadROSPoses.m  LoadSDTrackPoses.m  MakeCalTraj.m  R2Cart_aero.m  R2Cart_ros.m  R2Cart_vis.m  README  ReadArmAndCamPoses.m  RegisterCam2Arm.m  RegisterSensors.m  RegisterTraj_Noise.m  RegisterTraj_Noise_Pan.m  RegisterTraj_Noise_Pan_Tilt.m  RegisterTrajectories.m  Ros2Aero.m  Ros2Vis.m  SE3PathIntegral.m  ScaleBoundingBox.m  SetupAeroView.m  SetupRosView.m  SetupVisionView.m  Sim2T_aero.m  T2Cart_aero.m  T2Cart_ros.m  T2Cart_vis.m  T2Sim3_aero.m  T2Sim_aero.m  TestAeroPoses.m  TestROSPoses.m  (+19 more)
Attic/: TestConvertPathAeroToRos.m
ceres_cal/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  ceres_cal.cpp  test_csv.cpp
